Fix header size to fit the viewport
Setting the header to border-box means that the padding is factored in when calculating its width. If this is not done, the header width would be 100% of the viewport width + any padding when set on it. That causes some parts of the header to be rendered off-screen and causes horizontal scrolling.

--- a/app/assets/stylesheets/common/base/crawler_layout.scss
+++ b/app/assets/stylesheets/common/base/crawler_layout.scss
@@ -7,6 +7,7 @@ body.crawler {
     background-color: #fff;
     padding: 10px;
     box-shadow: shadow("header");
+    box-sizing: border-box;
   }
   div.topic-list div[itemprop="itemListElement"] {
     padding: 10px 0;
